[package]
edition = "2021"
name = "napi-rs_clipboard"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
arboard = { version = "2", features = ["wayland-data-control"] }
napi = { version = "2", default-features = false, features = ["napi3"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
