[package]
edition = "2021"
name = "napi-rs_clipboard"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
arboard = { version = "3", features = ["wayland-data-control"] }
base64 = "0.13.0"
duct = "0.13.5"
wsl = "0.1.0"
napi = { version = "2", default-features = false, features = ["napi3"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
